feat: allow users to set custom message expiration time
